# mops

./: .gitignore  CMakeLists.txt  README.md  computation.cpp  mops.cpp
cmake/: FindTACO.cmake
include/: kernel.hpp  matrix.hpp  matrix_generator.hpp  matrix_io.hpp  mops.hpp  utils.hpp
scripts/: consumer_load_darshan.sh  hpca003_load_darshan.sh  hpca003_load_darshan_gen.sh  hpca003_load_darshan_ior.sh  hpca004_load_darshan.sh  hpca004_load_darshan_gen.sh  hpca004_load_darshan_ior.sh  load_darshan_for_ops.sh  load_darshan_ops.sh
scripts/plot/: FPIO-Roofline.py  darshan_parser.sh  io_roofline.py  test.csv
